--- a/Semana3/requirements.txt
+++ b/Semana3/requirements.txt
@@ -1,9 +1,18 @@
 astroid==2.2.5
+atomicwrites==1.3.0
+attrs==19.1.0
 colorama==0.4.1
+importlib-metadata==0.15
 isort==4.3.20
 lazy-object-proxy==1.4.1
 mccabe==0.6.1
+more-itertools==7.0.0
+pluggy==0.12.0
+py==1.8.0
 pylint==2.3.1
+pytest==4.5.0
 six==1.12.0
 typed-ast==1.3.5
+wcwidth==0.1.7
 wrapt==1.11.1
+zipp==0.5.1
